syntax = "proto3";

package proto;
option go_package = "proto/actions";

message DummyTaskAction {
    string data = 1;
}

message OsTaskAction {
    enum OsType{
        command = 0;
        script = 1;
    }
    OsType type = 1;
    string commandLine  = 2;
    string runas = 3;
}

message AwsTaskAction {
    enum AwsType{
        lambda = 0;
        batch = 1;
    }
    AwsType type = 1;
    string name  = 2;
    string profile  = 3;
    string region  = 4;
    bytes  payload = 5;

}