syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package proto;
option go_package = "proto/wservices";

service TaskExecutionService{
	rpc StartTask(StartTaskMsg) returns (TaskExecutionResponseMsg){}
	rpc TerminateTask(TaskIdMsg) returns (WorkerActionMsg){}
	rpc CompleteTask(TaskIdMsg) returns (WorkerActionMsg){}
	rpc TaskStatus(TaskIdMsg) returns (TaskExecutionResponseMsg) {}
	rpc TaskOutput(TaskIdMsg) returns (stream TaskOutputMsg) {}
	rpc WorkerStatus(google.protobuf.Empty) returns(WorkerStatusResponseMsg){}
}

message TaskIdMsg{
	string taskID = 1;
	string ExecutionID = 2;
}

message StartTaskMsg{
    TaskIdMsg taskID  = 1;
    string type = 2;
    map<string,string> variables = 4;
	google.protobuf.Any Command = 5;
}

message TaskExecutionResponseMsg{
	enum TaskStatus{
		RECEIVED = 0;
		EXECUTING = 1;
		ENDED = 2;
		FAILED = 3;
		//for future use
		WAITING = 4;
		IDLE = 5;
		STARTING = 6;
	}
	TaskStatus status = 1;
	int32 returnCode  = 2;
	int32 statusCode  = 3;
	int32 pid         = 4;
	int32 tasks       = 5;
	int32 tasksLimit  = 6;
}

message WorkerActionMsg{
	bool success = 1;
	string message = 2;
	int32 tasks       = 3;
	int32 tasksLimit  = 4;
}
message TaskOutputMsg{
	string data  = 1;
}

message WorkerStatusResponseMsg{
	int32 tasks  = 1;
	int32 tasksLimit = 2;
	int32 cpuload = 3;
	int32 memused = 4;
	int32 memtotal = 5;
}
